<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dyno</string>
    <string name="broadcast_label">Broadcast: </string>
    <string name="ip_label">Device IP: </string>
    <string name="sent_label">Data sent: </string>
    <string name="received_label">Received: </string>
    <string name="charging_at_label">Next Charge @  </string>
    <string name="override_btn_label">Start Charging</string>
    <string name="stopOverride_btn_label">Stop Charging</string>
    <string name="sendData_btn_label">Schedule Charge</string>
    <string name="wifi_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="about_team">A Kairos Power product</string>
    <string name="about_develop">Developed by Conal McLaughlin</string>

</resources>
