<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageView
            android:layout_width="210dp"
            android:layout_height="100dp"
            android:src="@drawable/dyno"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginBottom="30dp"/>

        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/broadcast_label"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/broadcast_label"
                android:layout_gravity="left|top"
                android:layout_weight="50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:fontFamily="sans-serif-light"
                android:textStyle="italic"
                android:textSize="20sp"
                android:id="@+id/broadcast_value"
                android:layout_gravity="left|top"
                android:layout_weight="50" />
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ip_label"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/ip_label"
                android:layout_gravity="start|center"
                android:layout_weight="50"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:fontFamily="sans-serif-light"
                android:textStyle="italic"
                android:textSize="20sp"
                android:id="@+id/ip_value"
                android:layout_gravity="left|top"
                android:layout_weight="50" />
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sent_label"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/sent_label"
                android:layout_gravity="left|top"
                android:layout_weight="50"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:fontFamily="sans-serif-light"
                android:textStyle="italic"
                android:textSize="20sp"
                android:id="@+id/sent_value"
                android:layout_gravity="left|top"
                android:layout_weight="50" />
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/received_label"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/received_label"
                android:layout_gravity="left|top"
                android:layout_weight="50"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:fontFamily="sans-serif-light"
                android:textStyle="italic"
                android:textSize="20sp"
                android:id="@+id/received_value"
                android:layout_gravity="left|top"
                android:layout_weight="50" />
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/dividerHorizontal"
            android:orientation="vertical"
            android:showDividers="end|middle"
            android:layout_marginTop="10dp">

            <LinearLayout android:id="@+id/dateLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerHorizontal"
                android:dividerPadding="5dp"
                android:orientation="horizontal"
                android:showDividers="middle">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="5dp"
                    android:text="Date here!"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="25sp"/>
                <ImageButton
                    android:id="@+id/btnChangeDate" style="@android:style/Widget.Holo.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date"
                    android:tint="@android:color/holo_blue_light"/>
            </LinearLayout>

            <LinearLayout android:id="@+id/timeLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerHorizontal"
                android:dividerPadding="5dp"
                android:orientation="horizontal"
                android:showDividers="middle">

                <LinearLayout android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="5dp"
                        android:text="Time here!"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="25sp"/>

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:textOff="12H"
                        android:textOn="24H"/>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/btnChangeTime" style="@android:style/Widget.Holo.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_time"
                    android:tint="@android:color/holo_blue_light"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:id="@+id/button_groups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:divider="?android:attr/dividerHorizontal"
        android:dividerPadding="5dp"
        android:orientation="horizontal"
        android:showDividers="middle">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="33">
            <Button
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/stopOverride_btn"
                android:background="@drawable/red_marb"
                android:layout_gravity="center"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/stopOverride_btn_label"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/stopOverride_btn_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="33">
            <Button
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/override_btn"
                android:background="@drawable/green_marb"
                android:layout_gravity="center"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/override_btn_label"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/override_btn_label"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="33">
            <Button
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/sendData_btn"
                android:background="@drawable/yellow_marb"
                android:layout_gravity="center"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sendData_btn_label"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/sendData_btn_label"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>